--- a/Index.html
+++ b/Index.html
@@ -2,15 +2,16 @@
 <html>
 <head>
 <meta charset="UTF-8">
+<link href="css/style.css" rel="stylesheet">
 
 <title>exercicio aula 1</title> 
 
 </head>
 
 
-<body> 
+<body id="maisumponto">
 
-<h1 id="maisimportante"> isso é um título </h1>
+<h1> isso é um título </h1>
 <br>
 <h2> isso também é um título </h2>
 <p id="maisimoportante"> isso é um paragrafo </p> 
@@ -28,12 +29,3 @@
 
 </html> <iframe width="560" height="315" src="https://www.youtube.com/embed/XyyeLpmPPPY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
-<style>
-p{
-color: blue;
-}
-
-#maisimportante {
-Color:#BE1BE0;
-}
-</style> 
